Switch from WebFlux to WebMvc (#205)